# llm-litsearch

./: ExtractStudyInfo.ipynb  article_analysis.py  extract_embase.py  extract_pubmed.py  main.py  pdfs_to_md.py  pyproject.toml
data/: .gitignore  ExtractStudyInfo.ipynb  PM_EB_searches.tsv  clean_embase.py
