[project]
name = "llm-litsearch"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.40.0",
    "instructor>=1.8.1",
    "logfire>=3.23.0",
    "openai>=1.78.1",
    "polars>=1.29.0",
    "pydantic>=2.11.4",
    "pydantic-ai-slim[openai]>=0.3.7",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "ruff>=0.11.9",
]

# Configure mypy so it doesn't give the "Cannot find implementation or library stub for module" errors
[tool.mypy]
files = ["."]
ignore_missing_imports = true